got rid of any major issues i could find in terms of text covering stuff etc.

--- a/app/assets/stylesheets/approvals.scss
+++ b/app/assets/stylesheets/approvals.scss
@@ -23,6 +23,9 @@
   }
 
   .avatar {
+    @media screen and (max-width: 660px){
+      width: 100% !important
+    }
     a {
       display: inline-block;
     }
@@ -100,5 +103,37 @@
 
   #map-status {
     // font-size: 1.4rem;
+  }
+
+  .app-card-row {
+    margin: 0;
+    @media screen and (max-width: 660px){
+      flex-direction: column;
+      display: flex;
+    }
+  }
+
+  .app-name-row {
+    margin: 0;
+    flex-direction: row;
+    display: flex;
+  }
+
+  .permissions-column {
+    @media screen and (max-width: 660px){
+      width: 100% !important
+    }
+  }
+
+  .all-permissions {
+    @media screen and (max-width: 660px){
+      font-size: 1rem;
+    }
+  }
+
+  .permission-title {
+    @media screen and (max-width: 660px){
+      flex-direction: column;
+    }
   }
 }
